--- a/src/Style/_variaveis.scss
+++ b/src/Style/_variaveis.scss
@@ -1,10 +1,10 @@
 $fundo: #04010f;
 $claro: #f0ebeb;
-$card:#dcdff2;
+$card:#ffffff;
 $sombrasBox: 0 4px 10px rgba(0, 0, 0, 0.3);
-$destaque-rosa: #ff3d7f transparent;
-$gradiente-rosa: linear-gradient(135deg, #2f1048, #e4018d);
-$foco: #4c0f32;
+$destaque-rosa: #ff843d transparent;
+$gradiente-rosa: linear-gradient(135deg, #482410, #e48201);
+$foco: #4c300f;
 $botao-azul: linear-gradient(135deg, #2cd0e5, #2553af);
 $botao-amarelo: linear-gradient(135deg, #b9820b, #ede203);
 $box-fundo: rgba(0, 0, 0, 0.8);
