--- a/src/Style/_missaoCard.scss
+++ b/src/Style/_missaoCard.scss
@@ -35,6 +35,7 @@
   text-align: center;
   margin-bottom: 1rem;
   font-size: 2rem;
+  color: #ff843dd3;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
