--- a/src/Style/_menu.scss
+++ b/src/Style/_menu.scss
@@ -7,7 +7,6 @@
   transform: translateX(-50%);
   width: 90%;
   max-width: 800px;
-
   background: rgba(0, 0, 0, 0.7);
   border-radius: 1rem;
   padding: 1rem;
@@ -44,4 +43,18 @@
   margin-bottom: 0.5rem;
 }
 
+@media(max-width:480px){
 
+  .menu ul{
+    justify-content:space-between ;
+    gap: 100%;
+  }
+
+  .menu figure{
+    flex-direction: row;
+  }
+  .menu img{
+    width: 35px;
+    height: 35px;
+  }
+}
