--- a/src/Style/_modal.scss
+++ b/src/Style/_modal.scss
@@ -12,7 +12,6 @@ dialog.modal {
   padding: 2rem;
   text-align: center;
 
-
   border: 2px solid $destaque-rosa;
   box-shadow: 0 0 12px rgba(163, 7, 132, 0.7),
               0 8px 24px rgba(0, 0, 0, 0.4);
@@ -60,3 +59,12 @@ dialog.modal {
     width: 100px;
   }
 }
+
+@media(max-width: 480px){
+  dialog.modal{
+    bottom: 80px;
+    width: 100%;
+    height: 80%;
+  }
+}
+
